links added-icon & cards

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div
+              class="collapse navbar-collapse justify-content-end"
+              id="navbarCollapse"
+            >
               <div class="navbar-nav ms-auto me-5">
                 <a href="#" class="nav-item nav-link me-3">HOME</a>
                 <a href="#" class="nav-item nav-link me-3">ABOUT</a>
@@ -345,7 +348,10 @@
 
     <div class="container">
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        <a href="#" style="text-decoration: none">
+        <a
+          href="https://weather-appl-reactjs-adarsha.vercel.app/"
+          style="text-decoration: none"
+        >
           <div class="col">
             <div class="card h-100">
               <img
@@ -367,7 +373,10 @@
             </div>
           </div>
         </a>
-        <a href="#" style="text-decoration: none">
+        <a
+          href="https://github.com/adarshahelvar/React-Gmail-Clone"
+          style="text-decoration: none"
+        >
           <div class="col">
             <div class="card h-100">
               <img
@@ -387,7 +396,10 @@
             </div>
           </div>
         </a>
-        <a href="#" style="text-decoration: none">
+        <a
+          href="https://e-commerce-redux-adarsha.vercel.app/"
+          style="text-decoration: none"
+        >
           <div class="col">
             <div class="card h-100">
               <img src="./Images/ecommrce.jpg" class="card-img-top" alt="..." />
@@ -401,7 +413,10 @@
             </div>
           </div>
         </a>
-        <a href="#" style="text-decoration: none">
+        <a
+          href="https://achiversit-clone-adsraha.vercel.app/"
+          style="text-decoration: none"
+        >
           <div class="col">
             <div class="card h-100">
               <img
@@ -422,7 +437,10 @@
             </div>
           </div>
         </a>
-        <a href="#" style="text-decoration: none">
+        <a
+          href="https://react-expense-tracker-pi-rust.vercel.app"
+          style="text-decoration: none"
+        >
           <div class="col">
             <div class="card h-100">
               <img
@@ -441,7 +459,10 @@
             </div>
           </div>
         </a>
-        <a href="#" style="text-decoration: none">
+        <a
+          href="https://react-meals-red.vercel.app/"
+          style="text-decoration: none"
+        >
           <div class="col">
             <div class="card h-100">
               <img
@@ -478,7 +499,10 @@
         </div>
 
         <div>
-          <a href="" class="me-4 link-secondary">
+          <a
+            href="https://github.com/adarshahelvar"
+            class="me-4 link-secondary"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -492,7 +516,10 @@
               />
             </svg>
           </a>
-          <a href="" class="me-4 link-secondary">
+          <a
+            href="https://github.com/adarshahelvar"
+            class="me-4 link-secondary"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -506,7 +533,10 @@
               />
             </svg>
           </a>
-          <a href="" class="me-4 link-secondary">
+          <a
+            href="https://www.instagram.com/adarsh_helvar/"
+            class="me-4 link-secondary"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -520,7 +550,10 @@
               />
             </svg>
           </a>
-          <a href="" class="me-4 link-secondary">
+          <a
+            href="https://www.instagram.com/adarsh_helvar/"
+            class="me-4 link-secondary"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -534,7 +567,10 @@
               />
             </svg>
           </a>
-          <a href="" class="me-4 link-secondary">
+          <a
+            href="https://www.linkedin.com/in/adarshahelvar/"
+            class="me-4 link-secondary"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -548,7 +584,10 @@
               />
             </svg>
           </a>
-          <a href="" class="me-4 link-secondary">
+          <a
+            href="https://github.com/adarshahelvar"
+            class="me-4 link-secondary"
+          >
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="32"
@@ -573,59 +612,86 @@
                 <i class="fas fa-gem me-3 text-secondary"></i>ADARSHA A
               </h6>
               <p>
-                With years of experience in web design I have
-                mastered the skills of understanding client requirements
-                according to the latest trends. I have worked with businesses
-                from different niches so you can rely on me for yours.
+                With years of experience in web design I have mastered the
+                skills of understanding client requirements according to the
+                latest trends. I have worked with businesses from different
+                niches so you can rely on me for yours.
               </p>
             </div>
 
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
               <h6 class="text-uppercase fw-bold mb-4">STACKS</h6>
               <p>
-                <a href="#!" class="text-reset">ReactJS</a>
+                <a href="https://github.com/adarshahelvar" class="text-reset"
+                  >ReactJS</a
+                >
               </p>
               <p>
-                <a href="#!" class="text-reset">JavaScript</a>
+                <a href="https://github.com/adarshahelvar" class="text-reset"
+                  >JavaScript</a
+                >
               </p>
               <p>
-                <a href="#!" class="text-reset">Bootstarp</a>
+                <a href="https://github.com/adarshahelvar" class="text-reset"
+                  >Bootstarp</a
+                >
               </p>
               <p>
-                <a href="#!" class="text-reset">GitHub</a>
+                <a href="https://github.com/adarshahelvar" class="text-reset"
+                  >GitHub</a
+                >
               </p>
             </div>
 
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
               <h6 class="text-uppercase fw-bold mb-4">PROJECT LINKS</h6>
               <p>
-                <a href="#!" class="text-reset">Portfolio</a>
+                <a
+                  href="https://adarshahelvar.github.io/Portfolio-Bootstrap/"
+                  class="text-reset"
+                  >Portfolio</a
+                >
               </p>
               <p>
-                <a href="#!" class="text-reset">React Meals</a>
+                <a
+                  href="https://github.com/adarshahelvar/Food-selecting-Reactjs"
+                  class="text-reset"
+                  >React Meals</a
+                >
               </p>
               <p>
-                <a href="#!" class="text-reset">Weather App</a>
+                <a
+                  href="https://github.com/adarshahelvar/Weather-Appl-Reactjs"
+                  class="text-reset"
+                  >Weather App</a
+                >
               </p>
               <p>
-                <a href="#!" class="text-reset">G-Mail Clone</a>
+                <a
+                  href="https://github.com/adarshahelvar/React-Gmail-Clone"
+                  class="text-reset"
+                  >G-Mail Clone</a
+                >
               </p>
             </div>
 
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
               <h6 class="text-uppercase fw-bold mb-4">CONTACT</h6>
               <p>
-                <i class="fas fa-home me-3 text-secondary"></i> India, Karnataka, 577401
+                <i class="fas fa-home me-3 text-secondary"></i> India,
+                Karnataka, 577401
               </p>
               <p>
                 <i class="fas fa-envelope me-3 text-secondary"></i>
                 adarshaadi1997@gmail.com
               </p>
               <p>
-                <i class="fas fa-phone me-3 text-secondary"></i> + 91 86604 35323
+                <i class="fas fa-phone me-3 text-secondary"></i> + 91 86604
+                35323
               </p>
               <p>
-                <i class="fas fa-print me-3 text-secondary"></i> +  91 86604 35323
+                <i class="fas fa-print me-3 text-secondary"></i> + 91 86604
+                35323
               </p>
             </div>
           </div>
