Image one changes

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="col p-2">
           <div>
             <img
-              src="./Images/person1.jpg"
+              src="./Images/person1.jpeg"
               class="rounded-circle ms-3 mt-5"
               alt="person1"
               width="90%"
